--- a/aster.css
+++ b/aster.css
@@ -3,6 +3,8 @@
   @import "//dl.dropbox.com/s/9s289mbhxpdhb3l/starry.css";
 
   
+@import "//christieclee.github.io/highalo/high/high.css";
+@import "//christieclee.github.io/highalo/starry/starry.css";
 
 .aster-wrapper { 
     --background: #e6e6e6;
