--- a/holly.css
+++ b/holly.css
@@ -3,7 +3,8 @@
   @import "//dl.dropbox.com/s/9s289mbhxpdhb3l/starry.css";
 
 
-
+@import "//christieclee.github.io/highalo/high/high.css";
+@import "//christieclee.github.io/highalo/starry/starry.css";
   
     .holly-wrapper { 
     --background: #f2f2f2;
