--- a/begonia-posting.css
+++ b/begonia-posting.css
@@ -10,9 +10,9 @@
 @import "//christieclee.github.io/highalo/zuki/deer.css";
 
 .begonia-wrapper{ 
-   --background: #f5f5f5;
-    --shadow: #d8d8d8;
-    --shadow2: #e6e6e6;
+   --background: #f3f3f3;
+    --shadow: #cacaca;
+    --shadow2: #e2e2e2;
     --black: #212121;
   width: 420px;
   background: var(--background);
