--- a/calla.css
+++ b/calla.css
@@ -1,6 +1,4 @@
-@import "//dl.dropbox.com/s/6523jl7nh6hietx/high.css";
-@import "//dl.dropbox.com/s/9s289mbhxpdhb3l/starry.css";
-  
+ 
 @import "//christieclee.github.io/highalo/high/high.css";
 @import "//christieclee.github.io/highalo/starry/starry.css";
   
@@ -29,15 +27,20 @@
   .calla-background { 
     height: 110px;
     background-image: var(--pattern);
-    background-position: 00px 0px;
+    background-position: 0px 0px;
     opacity: 0.6;
     filter: grayscale(40%);
     background-size: 80%;
+    position: absolute; 
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+line-height: 0px;
   } 
   
   
   .calla-background:after { 
-  /*background: linear-gradient(-130deg, var(-), var(--haccent));*/
   background: var(--haccent);
   height: 110px; 
   width: 420px;
@@ -209,7 +212,7 @@
 #dom { 
 --hmain: #5E6E82; 
 --haccent: #a1888a;
---uni: '\64';
+/*--uni: '\64';*/
  --pattern: url(https://i.pinimg.com/564x/89/94/83/89948343faada8e5f76ff730a8c2f096.jpg);
 } 
 
@@ -290,5 +293,5 @@
 --hmain: #d16481;
 --haccent: #84b3b0;
 --uni:'\6d';
-    --pattern: url(https://i.pinimg.com/564x/aa/62/93/aa6293ac1807553c760af06f19624b8c.jpg);
+--pattern: url(https://i.pinimg.com/564x/aa/62/93/aa6293ac1807553c760af06f19624b8c.jpg);
 } 
