--- a/calla.css
+++ b/calla.css
@@ -3,7 +3,7 @@
 @import "//christieclee.github.io/highalo/starry/starry.css";
   
   .calla-wrapper { 
-    --body: #e7e7e7;
+    --body: #ededed;
     --white: #fbfbfb;
     --shadow: #bbbbbb;
     --background: #dfdfdf; 
