--- a/calla.css
+++ b/calla.css
@@ -77,7 +77,7 @@ line-height: 0px;
     z-index: 6;
   } 
   
-.colla-icon::before { 
+/*.colla-icon::before { 
   content: var(--uni);
   font-family: 'high', 'starry';
   position: relative; 
@@ -87,7 +87,8 @@ line-height: 0px;
   top: -5px;
    z-index:3;  
   text-shadow: 1px 2px var(--body);
-} 
+} */
+
   .colla-icon span { 
     font-size:70px;
     color: var(--haccent);
