--- a/calla.css
+++ b/calla.css
@@ -193,10 +193,10 @@ line-height: 0px;
 
 #alec { 
   --hmain: #9e6679; 
---haccent: #8a9295;
---uni: '\69';
+--haccent: #778e95;
 --pattern: url(https://i.pinimg.com/564x/e5/b6/c3/e5b6c34823282771d99fe69b0166c066.jpg);
   } 
+
 
 
 #darius { 
