--- a/calla.css
+++ b/calla.css
@@ -244,7 +244,7 @@ line-height: 0px;
 
 
 #oli { 
- --haccent: #de7868; 
+ --haccent: #c66b5d; 
 --hmain: #a48dad;
   --uni:'\6f'; 
    --pattern: url(https://i.pinimg.com/564x/dd/30/7b/dd307b0f276e540ed3abb2e41542302b.jpg);
