--- a/calla.css
+++ b/calla.css
@@ -128,9 +128,9 @@ line-height: 0px;
  color: var(--hmain);
   } 
    
-  .calla-bottom { 
+    .calla-bottom { 
     background: var(--haccent);
-    height:100px;
+    height:90px;
     position: relative;
     top: 0pxx;
     z-index: 4;
@@ -142,12 +142,12 @@ line-height: 0px;
    .calla-date { 
      position: absolute; 
      z-index: 3;
-     font: 30px 'montserrat', sans-serif;
+     font:28px 'montserrat', sans-serif;
      text-transform: uppercase; 
      font-weight: 900;
      color: var(--white);
      letter-spacing: 3px;
-     bottom: 25px;
+     bottom: 20px;
      right: 30px;
      line-height: 25px;
      text-shadow: 2px 2px var(--black);
@@ -162,7 +162,7 @@ line-height: 0px;
      text-decoration: none; 
      color: var(--white);
      position: relative; 
-     margin-top:30px;
+     margin-top:35px;
      left: 30px;
      width:280px;
      height: 0px;
@@ -175,8 +175,8 @@ line-height: 0px;
    .calla-tag a {
      text-decoration: none; 
     color: var(--white);
-     text-shadow: 1px 1px var(--black) ;
-  
+     text-shadow: 1px 1px var(--black); 
+    text-transform: lowercase;
    } 
 
 
