--- a/calla.css
+++ b/calla.css
@@ -1,6 +1,8 @@
  
 @import "//christieclee.github.io/highalo/high/high.css";
 @import "//christieclee.github.io/highalo/starry/starry.css";
+@import "//christieclee.github.io/highalo/stark/stark.css";
+@import "//christieclee.github.io/highalo/zuki/deer.css";
   
   .calla-wrapper { 
     --body: #ededed;
