--- a/calla.css
+++ b/calla.css
@@ -134,7 +134,7 @@ line-height: 0px;
     background: var(--haccent);
     height:90px;
     position: relative;
-    top: 0pxx;
+    top: 0px;
     z-index: 4;
     opacity: 0.5;
     display: flex;
@@ -172,7 +172,7 @@ line-height: 0px;
      font-weight: 700;
      display: inline;
      height: 10px;
-     padding:32px 0px ;
+     padding:34px 0px ;
      text-align: left; 
 
    } 
