--- a/calla.css
+++ b/calla.css
@@ -118,7 +118,7 @@ line-height: 0px;
     background: var(--body);
     font: 14.5px 'Roboto', sans-serif;
     line-height: 28px;
-    padding: 65px 50px;
+    padding: 65px 50px 60px;
     text-align: justify;
     position: relative;
     top: 0px;
