--- a/calla.css
+++ b/calla.css
@@ -66,7 +66,7 @@ line-height: 0px;
    top: -220px;
    transform:rotate(45deg);
    z-index: 6;
-   box-shadow: 1px 1px var(--background);
+  /* box-shadow: 1px 1px var(--background);*/
   } 
   
   .colla-icon { 
