--- a/aster.css
+++ b/aster.css
@@ -431,6 +431,7 @@ color: var(--accent);
 letter-spacing:1px;
  margin: 0px;
    margin-top: 0px;
+  margin-bottom: -10px;
 }
 
 .info-scroll h2::after, h1::after, .aevent::after { 
@@ -458,7 +459,7 @@ letter-spacing:1px;
     line-height: 16px;
     font-weight: 400;
     padding-left: 10px;
-    margin-top: -10px;
+    margin-top: 0px;
   } 
   
   .info-count { 
