--- a/calla.css
+++ b/calla.css
@@ -167,7 +167,7 @@ line-height: 0px;
      position: relative; 
      left: 30px;
      width: 300px;
-     top: 37px;
+     top: 37.5px;
      font-weight: 700;
      display: block;
      height: 10px;
@@ -179,7 +179,7 @@ line-height: 0px;
      text-decoration: none; 
     color: var(--white);
      text-shadow: 1px 1px var(--black); 
-    text-transform: lowercase;
+    text-transform: uppercase;
    } 
 
 
