--- a/calla.css
+++ b/calla.css
@@ -303,3 +303,15 @@ line-height: 0px;
 --uni:'\6d';
     --pattern: url(https://i.pinimg.com/564x/aa/62/93/aa6293ac1807553c760af06f19624b8c.jpg);
 }
+
+
+#rhys {
+--hmain: #8098aa;
+--haccent: #2b4a30;
+--uni:'\6d';
+    --pattern: url(https://i.pinimg.com/564x/92/12/c1/9212c1488a12e21a08725c0982790183.jpg);
+}
+
+#rhys .calla-background { 
+   background-position: 0px -210px;
+}
