--- a/calla.css
+++ b/calla.css
@@ -307,7 +307,7 @@ line-height: 0px;
 
 #rhys {
 --hmain: #8098aa;
---haccent: #2b4a30;
+--haccent: #304c35;
 --uni:'\6d';
     --pattern: url(https://i.pinimg.com/564x/92/12/c1/9212c1488a12e21a08725c0982790183.jpg);
 }
