--- a/aster.css
+++ b/aster.css
@@ -755,3 +755,13 @@ text-align: right;
 --name: 'phillipa h.';
 
 } 
+
+  #rhys { 
+ --main: #8098aa; 
+--accent: #304c35;
+--main2: #8098aa66; 
+--accent2: #304c3566;
+--img:  url(https://cdn.discordapp.com/attachments/707844943535800373/825943495046987817/4.png);
+--name: 'rhys p.';
+
+} 
