--- a/aster.css
+++ b/aster.css
@@ -775,3 +775,12 @@ text-align: right;
 --name: 'rook m.';
 
 } 
+  #lissy { 
+ --main: #a7af97; 
+--accent: #d38878;
+--main2: #a7af9766; 
+--accent2: #d3887866;
+--img:  url(https://i.pinimg.com/564x/b3/8f/50/b38f507bb690d9a8b8261fdf2a1a712f.jpg);
+--name: 'felicity b.';
+
+} 
