--- a/calla.css
+++ b/calla.css
@@ -337,7 +337,7 @@ line-height: 0px;
 }
 
   #lissy {
---hmain: #a7af97;
+--hmain: #9ea68f;
 --haccent: #e89684;
 --uni:'\6d';
     --pattern: url(https://i.pinimg.com/474x/fb/81/50/fb8150a0cd89359fba74920f4abcab77.jpg);
