--- a/hebe.css
+++ b/hebe.css
@@ -16,6 +16,7 @@
       position: relative; 
       overflow: hidden;
       margin: 30px 0px ;
+          -webkit-text-size-adjust: none;
     } 
     
     .hebe-wrapper b { 
