--- a/verbena.css
+++ b/verbena.css
@@ -8,14 +8,13 @@
     --backgroundt: #f1f1f180;
     --shadow2: #dcdcdc;
     --black: #2f2f2f;
-      
       width: 420px;
       background: var(--background);
       min-height: 200px;
       border-radius:15px 15px 0px 0px ;
       font-family: 'Nunito', Sans-serif;
       position: relative; 
-      margin: 30px 0px ;
+      margin: 30px 0px;
       display: inline-block;
     } 
     
@@ -84,7 +83,7 @@ border-bottom: 1px solid var(--shadow2);
     .verbena-bottom { 
       height:30px;
       position: relative;
-      margin-top: 0px;
+      margin-bottom: 50px;
     } 
     
     .verbena-gradient { 
@@ -112,7 +111,7 @@ border-bottom: 1px solid var(--shadow2);
     top:0px;
     z-index: 2;
     height:75px;
-
+background-color: var(--background);
     } 
     
     .verbena-tag { 
