--- a/verbena.css
+++ b/verbena.css
@@ -16,6 +16,7 @@
       position: relative; 
       margin: 30px 0px;
       display: inline-block;
+      box-shadow: 2px 0px rgba(232, 228, 228, 0.6);
     } 
     
     .verbena-wrapper b { 
