--- a/verbena.css
+++ b/verbena.css
@@ -25,7 +25,7 @@
     .verbena-date { 
       font: 20px 'Spartan', sans-serif;
       position: absolute;
-      right:55px;
+      right:57px;
       color: var(--hmain);
       font-weight: 800; 
       text-transform: uppercase;
@@ -33,7 +33,7 @@
       z-index: 5;
       opacity: 0.4;
       width:70px;
-      text-align: left; 
+      text-align: right; 
       text-shadow: 2px 2px var(--shadow);
     } 
  .verbena-top { 
