--- a/verbena.css
+++ b/verbena.css
@@ -16,7 +16,7 @@
       position: relative; 
       margin: 30px 0px;
       display: inline-block;
-      box-shadow: 2px 0px rgba(232, 228, 228, 0.7);
+        box-shadow: 3px 3px 3px  rgba(232, 228, 228, 0.9);
     } 
     
     .verbena-wrapper b { 
