--- a/verbena.css
+++ b/verbena.css
@@ -16,7 +16,8 @@
       position: relative; 
       margin: 30px 0px;
       display: inline-block;
-        box-shadow: 3px 3px 3px  rgba(232, 228, 228, 0.9);
+      box-shadow: 3px 3px 3px  rgba(232, 228, 228, 0.9);
+       -webkit-text-size-adjust: none;
     } 
     
     .verbena-wrapper b { 
