--- a/verbena.css
+++ b/verbena.css
@@ -1,5 +1,5 @@
 
-@import "//dl.dropbox.com/s/6523jl7nh6hietx/high.css";  
+@import "////christieclee.github.io/highalo/high/high.css";  
 
     .verbena-wrapper { 
     --white: #ffffff;
