--- a/verbena.css
+++ b/verbena.css
@@ -1,5 +1,5 @@
 
-@import "////christieclee.github.io/highalo/high/high.css";  
+@import "//christieclee.github.io/highalo/high/high.css";  
 
     .verbena-wrapper { 
     --white: #ffffff;
