--- a/yarrow.css
+++ b/yarrow.css
@@ -35,12 +35,20 @@
 
 .ytoggle-wrap input[type=checkbox] { display: none;}
 
+ .yarrow-content { 
+  overflow: hidden; 
+    width: 530px;
+    height: 470px; 
+   position: relative; 
+   z-index: 7;
 
+  }
 
 .yarrow-toggle { 
- margin: 20px;
+
  width:480px;
  height:420px;
+ margin: 20px; 
  border: 4px double var(--grey);
 background: var(--background);
 overflow: hidden;
@@ -50,6 +58,7 @@ font: 12px 'nunito', sans-serif;
   text-transform: lowercase;
   position: relative; 
   top:-460px;
+  left: 0px; 
   z-index: 8; 
   -webkit-transition: ease-in-out 0.6s;  
    -ms-transition: ease-in-out 0.6s;  
@@ -57,7 +66,24 @@ font: 12px 'nunito', sans-serif;
    -o-transition: ease-in-out 0.6s;  
 }
 
+  .yarrow-timeline { 
+ border: 4px double var(--grey);
+ margin: 20px; 
+ width:480px;
+ height:420px;
+ position: absolute; 
+ overflow-y: scroll; 
+  overflow-x:hidden;
+  z-index: 6;
+  top: 0px;
+  left:0px;
 
+  -webkit-transition: ease-in 0.6s;  
+   -ms-transition: ease-in 0.6s;  
+   -moz-transition: ease-in 0.6s;  
+   -o-transition: ease-in 0.6s;  
+  } 
+  
 
  input[type=checkbox]:checked ~ .yarrow-toggle { 
   top: 0px;
@@ -71,15 +97,16 @@ font: 12px 'nunito', sans-serif;
   }
   
    input[type=checkbox]:checked ~ .yarrow-timeline { 
-  top: 460px;
-  right: 0px;
+  top:0px;
+  left:-700px;
   z-index: 10; 
   opacity: 1;
   -webkit-transition: ease-in-out 0.6s;  
    -ms-transition: ease-in-out 0.6s;  
    -moz-transition: ease-in-out 0.6s;  
-   -o-transition: ease-in-out 0.6s;  
+   -o-transition: ease-in-out 0.6s;   
   }
+
 
 .ytoggle-wrap label { 
  position: absolute; 
@@ -104,6 +131,8 @@ color: var(--hmain);
     
     
 /*top bar*/    
+
+
   .yarrow-top { 
     height: 130px; 
     background: var(--hmain);
@@ -234,34 +263,11 @@ transform: rotate(-60deg);
   } 
 
   
-  .yarrow-content { 
-  overflow: hidden; 
-  width: 530px;
-  height: 470px;
-   position: relative; 
-   z-index: 7;
 
-  }
   
   /*timeline*/
   
-  .yarrow-timeline { 
- border: 4px double var(--grey);
- margin: 20px;
- width:480px;
- height:420px;
- position: absolute; 
- overflow-y: scroll; 
-  overflow-x:hidden;
-  z-index: 6;
-  top: 0px;
-  right:0px;
-  -webkit-transition: ease-in-out 0.6s;  
-   -ms-transition: ease-in-out 0.6s;  
-   -moz-transition: ease-in-out 0.6s;  
-   -o-transition: ease-in-out 0.6s;  
-  } 
-  
+
   .yarrow-timeline::-webkit-scrollbar { width: 0px;  }
  .yarrow-timeline::-webkit-scrollbar-track { background:; display: none; }
  .yarrow-timeline::-webkit-scrollbar-thumb { background: ; border: 0; }
