--- a/yarrow.css
+++ b/yarrow.css
@@ -40,7 +40,6 @@
   }
 
 .yarrow-toggle { 
-
  width:480px;
  height:420px;
  margin: 20px; 
@@ -52,8 +51,7 @@ color: var(--black);
 font: 12px 'nunito', sans-serif; 
   text-transform: lowercase;
   position: relative; 
-/*  top:-460px;*/
-  top: 0px;
+ top:-460px;
   left: 0px; 
   z-index: 8; 
   -webkit-transition: ease-in-out 0.5s;  
@@ -81,7 +79,7 @@ font: 12px 'nunito', sans-serif;
   } 
   
 
- input[type=checkbox]:checked ~ .yarrow-toggle { 
+.yarrow-content input[type=checkbox]:checked ~ .yarrow-toggle { 
   top: 0px;
   right: 0px;
   z-index: 10; 
@@ -92,7 +90,7 @@ font: 12px 'nunito', sans-serif;
    -o-transition: ease-in-out 0.8s;  
   }
   
-   input[type=checkbox]:checked ~ .yarrow-timeline { 
+.yarrow-content   input[type=checkbox]:checked ~ .yarrow-timeline { 
   top:0px;
   left:-600px;
   z-index: 10; 
@@ -140,13 +138,20 @@ z-index: 5;
 
 .y-rel2 {
   position: absolute;
-  right: -450px;
+right: -450px;
   top: 50px;
+ z-index: 8;
  -webkit-transition: ease-in-out 0.5s;  
    -ms-transition: ease-in-out 0.5s;  
    -moz-transition: ease-in-out 0.5s;  
    -o-transition: ease-in-out 0.5s;  
-
+    align-items: flex-start;
+    height: 300px;
+  width:350px; 
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  align-content: flex-start;
 } 
 
 .y-chartoggle input[type=checkbox]:checked ~ .y-rel2 { 
@@ -161,15 +166,6 @@ right:65px;
    -o-transition: ease-in-out 0.5s;  
   }
 
-
-
-.y-info-scroll#y-relscroll { 
-    height: 300px;
-  width:350px; 
-  display: inline-flex;
-  flex-wrap: wrap;
-  flex-grow: 1;
-} 
 
 
 .y-chartoggle input[type=checkbox]:checked ~ .yarrow-extras { 
@@ -541,7 +537,7 @@ z-index: 2;
   margin-right: 0px;
   line-height: 15px;
   position: relative; 
-  font-size: 11px;
+  font-size: 12px;
 
 } 
 
@@ -735,7 +731,7 @@ text-align: left;
  .y-rel2::-webkit-scrollbar-thumb { background: ; border: 0; }
 
 .yarrow-rel { 
-  font-size: 11px;
+  font-size: 11.7px;
   background-color: var(--bg2);
   padding: 10px; 
 text-transform: uppercase; 
@@ -743,7 +739,7 @@ text-transform: uppercase;
   color: var(--black);
   border-radius: 5px;
   overflow: hidden;
-  line-height: 5px;
+  line-height: 10px;
   margin:  5px ; 
   height: 15px;
   flex-grow: 1;
@@ -779,6 +775,13 @@ text-transform: uppercase;
   top: 3px; 
   color: var(--haccent);
     margin-right: 5px;
+}
+
+#hm {
+  content: '';
+  position: relative; 
+  font-size: 11.7px; 
+  line-height: 14px;
 }
 
 #fam::before {
